tests/characterization/snapshots/characterization__representative_errors__backend_versions_no_arguments.snap
---
source: tests/characterization/main.rs
expression: "context.run(args, 1)"
---
exit: 1
--- stdout ---
Usage:
  oqtopus backend versions <engine|tranqu|gateway>
--- stderr ---
--- end ---
