tests/characterization/snapshots/characterization__representative_errors__manager_versions_extra_argument.snap
---
source: tests/characterization/main.rs
expression: "context.run(args, 1)"
---
exit: 1
--- stdout ---
Usage:
  oqtopus manager versions
--- stderr ---
--- end ---
